<?xml version="1.0"?>
<package format="3">
  <name>gsmpl</name>
  <version>0.0.0</version>
  <description>
    gsmpl
  </description>
  <maintainer email="gsmpl-owners@googlegroups.com">
    The gsmpl Authors
  </maintainer>
  <license>Apache 2.0</license>

  <url>https://github.com/gsmpl-project/gsmpl</url>

  <author email="google-gsmpl@googlegroups.com">
    The gsmpl Authors
  </author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>git</build_depend>

  <depend>eigen</depend>
  <depend>libgoogle-glog-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
